swim_common/src/form/tests/derive/form/tag_no_to_string.stderr
error[E0277]: the trait bound `B: Tag` is not satisfied
  --> $DIR/tag_no_to_string.rs:21:14
   |
21 |     #[derive(Form)]
   |              ^^^^ the trait `Tag` is not implemented for `B`
   |
   = note: required by `as_string`
   = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `B: Tag` is not satisfied
  --> $DIR/tag_no_to_string.rs:21:14
   |
21 |     #[derive(Form)]
   |              ^^^^ the trait `Tag` is not implemented for `B`
   |
   = note: required by `from_string`
   = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)
